# rpi-drum-machine

./: Untitled Sketch.fzz  arduino_drum_machine_sketch.fzz  paper_prototype.key  scetch.fzz
DrumMachine/: .gitignore  AInputController.h  AOutputController.h  CMakeLists.txt  DrumMachine.cpp  DrumMachine.h  DrumMachineInputListener.cpp  DrumMachineInputListener.h  InputListener.h  LedController.cpp  LedController.h  RaspInputController.cpp  RaspInputController.h  RaspOutputController.cpp  RaspOutputController.h  Sample.cpp  Sample.h  Timer.cpp  Timer.h  clock.cpp  main.cpp  mainExample.cpp  sample.cpp  sample.h
dev/: AOutputController.h  CMakeLists.txt  DrumMachine.cpp  DrumMachine.h  DrumMachineInputListener.cpp  RaspOutputController.cpp  Sample.cpp  Sample.h  Timer.cpp  main.cpp
exec/: DrumMachine
source/: AOutputController.h  CMakeLists.txt  Display.cpp  Display.h  DrumMachine.cpp  DrumMachine.h  DrumMachineInputListener.cpp  DrumMachineInputListener.h  InputListener.h  RaspInputController.cpp  RaspInputController.h  RaspOutputController.cpp  RaspOutputController.h  Sample.cpp  Sample.h  Timer.cpp  Timer.h  doxyconf  main.cpp
source/docs/docbook/: _a_output_controller_8h.xml  _display_8cpp.xml  _display_8h.xml  _drum_machine_8cpp.xml  _drum_machine_8h.xml  _drum_machine_input_listener_8cpp.xml  _drum_machine_input_listener_8h.xml  _input_listener_8h.xml  _rasp_input_controller_8cpp.xml  _rasp_input_controller_8h.xml  _rasp_output_controller_8cpp.xml  _rasp_output_controller_8h.xml  _sample_8cpp.xml  _sample_8h.xml  _timer_8cpp.xml  _timer_8h.xml  class_a_output_controller.xml  class_display.xml  class_drum_machine.xml  class_drum_machine_input_listener.xml  class_input_listener.xml  class_rasp_input_controller.xml  class_rasp_output_controller.xml  class_sample.xml  class_timer.xml  index.xml  main_8cpp.xml  namespacebeat.xml  namespaceinputs.xml  namespaceoutputs.xml  namespacesample.xml  namespacestate.xml  namespacestd_1_1chrono.xml
source/docs/html/: _a_output_controller_8h.html  _a_output_controller_8h_source.html  _display_8cpp.html  _display_8cpp_source.html  _display_8h.html  _display_8h_source.html  _drum_machine_8cpp.html  (+85 more)
untitled1/: CMakeLists.txt  main.cpp
(+112 files in other folders)
